Using linux binding for jdk19